# RAG-Practice

./: .gitignore  README.md  pyproject.toml  requirement.txt
DataEmbeding/: embeddings.py  embeddings_info.py  huggingface_embeddings.py  openai_embeddings.py
DataIngestParsing/: dataingestion.ipynb  dataingestion.py  document_splitter.py  json_loader.py  pdf_loader.py  text_loader.py  word_loader.py
DataIngestParsing/data/text/: sample.txt
VectorStore/: chromaDB.py
data/doc/: data-processing-agreement.docx
data/json/: dummy.json
data/text/: rag_example_1.txt  rag_example_2.txt  rag_example_3.txt  sample.txt
